DLL/ZetaAPI.pas

{============================================================================

  ZipBreak's Zeta Engine - Tiled, Isometric Engine for RPGs
  Copyright (c) 2002 Virgilio A. Blones, Jr. (Vij)

  Module:     ZetaAPI.PAS
              Module containing external API interfaces to the engine
  Author:     Vij

  -----------------------
  VERSION CONTROL/HISTORY
  -----------------------

  $Header: /users/vij/backups/CVS/ZetaEngine/DLL/ZetaAPI.pas,v 1.4 2002/12/18 08:28:50 Vij Exp $
  $Log: ZetaAPI.pas,v $
  Revision 1.4  2002/12/18 08:28:50  Vij
  New API functions added

  Revision 1.3  2002/11/02 07:03:57  Vij
  lots of new exports here.  will be subsumed into ZetaInterfaces as soon as
  I figure out how to access COM-like interfaces directly from VB

  Revision 1.2  2002/10/01 13:50:47  Vij
  Added PlayCutScene(), LoadWorld()

  Revision 1.1.1.1  2002/09/13 17:15:19  Vij
  Starting Version Control


  TODO:
  World_CreatePC
  World_DropPC
  World_ReplacePC

 ============================================================================}

unit ZetaAPI;

interface

uses
  Types,
  Windows,
  ZbGameUtils,
  ZZEWorld,
  ZetaTypes;


  // ++++++++++++++++++++++++
  // Global Runner
  // ++++++++++++++++++++++++

  procedure ZETA_Run (
    EscapeExits: Integer; hInstance: HINST;
    AWinTitle, AProgConfig: PChar;
    lpfnCreateUICallback, lpfnHandleEventCallback: tCALLBACK); stdcall;

  // ++++++++++++++++++++++++
  //  Windows (TM) Wrapper
  // ++++++++++++++++++++++++

  function ZEWW_Prepare (lpszConfigFile: PChar; lpfnCreateUICallback: tCALLBACK;
    lpfnHandleEventCallback: tCALLBACK): integer; stdcall;
  function ZEWW_CreateWindow (ClassRef: integer; hInstance: HINST;
    WindowClassName, WindowTitle: PChar; WindowProc: tCALLBACK;
    WindowFlags: DWORD; iWidth, iHeight: integer): tINTBOOL; stdcall;
  procedure ZEWW_Execute (ClassRef: integer); stdcall;
  procedure ZEWW_Shutdown (ClassRef: integer); stdcall;

  // ++++++++++++++++++++++++
  //  Engine Proper Routines
  // ++++++++++++++++++++++++

  function ZEE_Initialize (lpszConfigurationFile: PChar;
    hHostWindow: HWND; hAppInstance: HINST): tINTBOOL; stdcall;
  procedure ZEE_Shutdown; stdcall;
  procedure ZEE_TerminateSelf; stdcall;
  procedure ZEE_TerminateEngine; stdcall;
  procedure ZEE_Activate; stdcall;
  procedure ZEE_Deactivate; stdcall;
  function ZEE_Refresh: tINTBOOL; stdcall;
  procedure ZEE_PushEvent (EventCommand: Integer); stdcall;
  procedure ZEE_AddCallback (AName: PChar; ACallback: tCALLBACK); stdcall;

  function ZEE_ScreenWidth: integer; stdcall;
  function ZEE_ScreenHeight: integer; stdcall;
  function ZEE_ScreenColorDepth: integer; stdcall;

  procedure ZEE_SetMusic (lpszMusicName: PChar); stdcall;
  procedure ZEE_ClearMusic; stdcall;
  procedure ZEE_PlaySound (lpszSoundName: PChar); stdcall;
  procedure ZEE_PlayCutScene (lpszCutSceneFile: PChar); stdcall;

  procedure ZEE_TogglePause (ibActive: tINTBOOL); stdcall;
  function ZEE_IsMusicActive: tINTBOOL; stdcall;
  procedure ZEE_ToggleMusic (ibActive: tINTBOOL); stdcall;
  function ZEE_IsSoundActive: tINTBOOL; stdcall;
  procedure ZEE_ToggleSound (ibActive: tINTBOOL); stdcall;
  procedure ZEE_ToggleFPSDisplay (ibVisible: tINTBOOL); stdcall;

  procedure ZEE_StartTimer (ATimerValue: Cardinal); stdcall;
  procedure ZEE_StartTimerEx (AMinutes, ASeconds: Cardinal); stdcall;
  procedure ZEE_PauseTimer; stdcall;
  procedure ZEE_UnPauseTimer; stdcall;
  procedure ZEE_StopTimer; stdcall;

  function ZEE_IsGlobalExitOnEscapeSet: tINTBOOL; stdcall;
  procedure ZEE_ToggleGlobalExitOnEscape (ibActive: tINTBOOL); stdcall;

  function ZEE_CmpStr (Ref, pCmp: PChar): Integer; stdcall;

  procedure ZEE_AddKeyHook (KeyCode, UserHandler: Integer); stdcall;
  procedure ZEE_ClearKeyHook (KeyCode: Integer); stdcall;

  function ZEE_GetElapsedTicks: Integer; stdcall;
  function ZEE_GetMouseX: Integer; stdcall;
  function ZEE_GetMouseY: Integer; stdcall;

  procedure ZEE_DebugText (lpText: PChar); stdcall;
  function ZEE_CopyPChar (pSource, pDest: PChar; nDestLen: Integer): Integer; stdcall;


  // +++++++++++++++++++++
  //  File-Handling Stuff
  // +++++++++++++++++++++

  function ZEF_FileExists (FileName: PChar; Ext: PChar): Integer; stdcall;
  procedure ZEF_DeleteFile (FileName: PChar; Ext: PChar); stdcall;
  procedure ZEF_CreateFile (FileName: PChar; Ext: PChar); stdcall;

  function ZEF_OpenFile (FileName, Ext: PChar): Integer; stdcall;
  procedure ZEF_CloseFile (hFile: Integer); stdcall;
  procedure ZEF_WriteToFileI (hFile, Data: Integer); stdcall;
  function ZEF_ReadFromFileI (hFile: Integer): Integer; stdcall;


  // ++++++++++++++++++++++++++
  //  Windowing System Helpers
  // ++++++++++++++++++++++++++

  function ZEUI_Root: tCONTROL; stdcall;
  function ZEUI_CreateDesktop (lpszRefName, lpszDeskName: PChar): tCONTROL; stdcall;
  function ZEUI_GetDesktop (lpszRefName: PChar): tCONTROL; stdcall;
  function ZEUI_SwitchDesktop (lpszRefName: PChar): tCONTROL; stdcall;
  function ZEUI_CreateGameView (Left, Top, Right, Bottom: integer): tCONTROL; stdcall;

  function ZEUI_CreateControl (lpszClassName: PChar;
    Left, Top, Right, Bottom: integer): tCONTROL; stdcall;
  procedure ZEUI_InsertControl (ctlDest, ctlToInsert: tCONTROL); stdcall;
  function ZEUI_GetProp (ControlRef: tCONTROL; lpszPropName: PChar): PChar; stdcall;
  procedure ZEUI_SetProp (ControlRef: tCONTROL; lpszPropName, lpszPropValue: PChar); stdcall;
  procedure ZEUI_ToggleParentFontUse (ControlRef: tCONTROL; ibActive: tINTBOOL); stdcall;

  procedure ZEUI_RunDialog (ControlRef: tCONTROL); stdcall;
  procedure ZEUI_ShowInputBox (lpszPrompt: PChar; iCommand: integer; ANoCancel: tINTBOOL); stdcall;
  procedure ZEUI_ShowMsgBox (lpszMessage: PChar; SendCommand: Integer); stdcall;
  procedure ZEUI_ShowMsgBoxEx (lpszMessage: PChar; Left, Top, Right, Bottom, SendCommand: integer); stdcall;
  procedure ZEUI_ShowTextDialog (iWidth, iHeight: Integer;
    lpszFileName, lpszFontName: PChar); stdcall;
  procedure ZEUI_ShowPromptDialog (iWidth, iHeight: Integer;
    lpszPrompt: PChar; iCommandToGenerate: Integer); stdcall;


  procedure ZEUI_Hide (ControlRef: tCONTROL); stdcall;
  procedure ZEUI_Show (ControlRef: tCONTROL); stdcall;
  procedure ZEUI_Enable (ControlRef: tCONTROL; ibActive: tINTBOOL); stdcall;

  function ZEUI_GetXPos (ControlRef: tCONTROL): Integer; stdcall;
  function ZEUI_GetYPos (ControlRef: tCONTROL): Integer; stdcall;
  function ZEUI_GetWidth (ControlRef: tCONTROL): Integer; stdcall;
  function ZEUI_GetHeight (ControlRef: tCONTROL): Integer; stdcall;

  procedure ZEUI_MoveTo (ControlRef: tCONTROL; NewX, NewY: Integer); stdcall;
  procedure ZEUI_MoveRel (ControlRef: tCONTROL; DeltaX, DeltaY: Integer); stdcall;
  procedure ZEUI_Resize (ControlREf: tCONTROL; NewWidth, NewHeight: Integer); stdcall;

  procedure ZEUI_Delete (ControlRef: tCONTROL); stdcall;


  // ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
  //  Game Stuff
  // ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
  //  ENTITIES API
  // ----------------------------------------------------------

  function ZEEN_NameToHandle (lpszName: PChar): Integer; stdcall;
  procedure ZEEN_Delete (hEntity: Integer); stdcall;
  procedure ZEEN_Unplace (hEntity: Integer); stdcall;

  function ZEEN_CompareBaseName (hEntity: Integer; lpszWithName: PChar): Integer; stdcall;
  function ZEEN_CompareName (hEntity: Integer; lpszWithName: PChar): Integer; stdcall;
  function ZEEN_PrefixInName (hEntity: Integer; lpszPrefix: PChar): Integer; stdcall;
  function ZEEN_GetWidth (hEntity: Integer): Integer; stdcall;
  function ZEEN_GetLength (hEntity: Integer): Integer; stdcall;
  function ZEEN_IsOrientable (hEntity: Integer): tINTBOOL; stdcall;
  function ZEEN_CanMove (hEntity: Integer): tINTBOOL; stdcall;
  function ZEEN_MovementRate (hEntity: Integer): Integer; stdcall;
  function ZEEN_Updateable (hEntity: Integer): tINTBOOL; stdcall;

  function ZEEN_GetXPos (hEntity: Integer): Integer; stdcall;
  function ZEEN_GetYPos (hEntity: Integer): Integer; stdcall;

  function ZEEN_OnMap (hEntity: Integer): tINTBOOL; stdcall;
  function ZEEN_OnActiveArea (hEntity: Integer): tINTBOOL; stdcall;

  function ZEEN_Orientation (hEntity: Integer): TZbDirection; stdcall;
  procedure ZEEN_SetStateInfo (hEntity: Integer; lpszStateInfo: PChar); stdcall;

  procedure ZEEN_SetHandler (hEntity: Integer; Handler: tCALLBACK); stdcall;
  procedure ZEEN_ClearHandler (hEntity: Integer); stdcall;
  function ZEEN_GetHandlerData (hEntity: Integer): Integer; stdcall;
  procedure ZEEN_SetHandlerData (hEntity: Integer; AData: Integer); stdcall;

  procedure ZEEN_BeginPerform (hEntity: Integer; APerformState: PChar;
    ibImmediate: Integer); stdcall;
  procedure ZEEN_ClearActions (hEntity: Integer); stdcall;
  procedure ZEEN_MoveTo (hEntity: Integer; X, Y, Z: Integer); stdcall;

  function ZEEN_CanSee (hEntity: Integer; Target: PChar): tINTBOOL; stdcall;
  function ZEEN_CanSee2 (hEntity, Target: Integer): tINTBOOL; stdcall;
  function ZEEN_HowFarFrom (hEntity: Integer; Target: PChar): Integer; stdcall;
  function ZEEN_HowFarFrom2 (hEntity, Target: Integer): Integer; stdcall;
  function ZEEN_IsNeighbor (hEntity: Integer; Target: PChar): tINTBOOL; stdcall;
  function ZEEN_IsNeighbor2 (hEntity, Target: Integer): tINTBOOL; stdcall;

  procedure ZEEN_Face (hEntity: Integer; Target: PChar); stdcall;
  procedure ZEEN_Face2 (hEntity, Target: Integer); stdcall;
  procedure ZEEN_Approach (hEntity: Integer; Target: PChar); stdcall;
  procedure ZEEN_Approach2 (hEntity, Target: Integer); stdcall;

  procedure ZEEN_FaceTo (hEntity: Integer; Direction: TZbDirection); stdcall;
  function ZEEN_CanStepTo (hEntity: Integer; Direction: TZbDirection): tINTBOOL; stdcall;
  procedure ZEEN_StepTo (hEntity: Integer; Direction: TZbDirection); stdcall;
  procedure ZEEN_SetCaption (hEntity: Integer; ACaption: PChar); stdcall;

  function ZEEN_GetNeighbor (hEntity: Integer; Direction: TZbDirection): Integer; stdcall;


  // ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
  //  WORLD API
  // ----------------------------------------------------------

type
  TZEEnumCallbackProc = procedure (hEntity: Integer); stdcall;

  procedure ZEGE_LoadWorld (lpszWorldFile: PChar); stdcall;
  procedure ZEGE_SwitchToArea (lpszAreaName: PChar); stdcall;

  procedure ZEGE_CreatePC (lpszMasterName, lpszWorkingName: PChar;
    lpfnCallback: tCALLBACK); stdcall;
  procedure ZEGE_ReplacePC (lpszMasterName, lpszWorkingName: PChar;
    lpfnCallback: tCALLBACK); stdcall;
  procedure ZEGE_ClearPC; stdcall;

  function ZEGE_GetPC : Integer; stdcall;
  procedure ZEGE_CenterPC; stdcall;
  procedure ZEGE_CenterAt (X, Y, Z: Integer); stdcall;

  procedure ZEGE_LockPortals; stdcall;
  procedure ZEGE_UnlockPortals; stdcall;

  procedure ZEGE_DropPC; stdcall;
  procedure ZEGE_DropPCEx (lpszAreaName: PChar; X, Y, Z: integer); stdcall;
  procedure ZEGE_UnDropPC; stdcall;

  function ZEGE_GetEntity (lpszEntityName: PChar): Integer; stdcall;
  procedure ZEGE_DeleteEntity (hEntity: Integer); stdcall;
  procedure ZEGE_DeleteEntity2 (lpszEntityName: PChar); stdcall;
  procedure ZEGE_EnumEntities (EnumCallback: tCALLBACK); stdcall;

  procedure ZEGE_QueueForDeletion (hEntity: Integer); stdcall;
  procedure ZEGE_QueueForDeletion2 (lpszEntityName: PChar); stdcall;


implementation

uses
  SysUtils,
  Classes,
  StrUtils,
  Math,
  //
  ZblAppFrame,
  ZblIEvents,
  //
  ZbCallbacks,
  ZbDebug,
  ZbScriptable,
  //
  ZEDXFramework,
  ZEWSDefines,
  ZEWSBase,
  ZEWSDialogs,
  //
  ZZEGameWindow,
  ZZECore;


///////////////////////------------------------------------------------------
procedure ZETA_Run (EscapeExits: Integer; hInstance: HINST; AWinTitle, AProgConfig: PChar;
  lpfnCreateUICallback, lpfnHandleEventCallback: tCALLBACK); stdcall;
begin
  TraceLn ('ZETA_Run() - ENTER');
  g_ExitOnEscape := (EscapeExits <> 0);
